...
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/titleRegisto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>
...
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/itemLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:imeOptions="flagNoExtractUi"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
...
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/valorLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regPhoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true" />
...
            app:boxCornerRadiusTopStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/btnAlterarSenhaPerfil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regSenhaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

...
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnFinalizarRegisto"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/guardar_na_listagem"
            android:textSize="16sp"
...
