...
                    android:background="@color/headerColor"
                    android:paddingBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- Botão Menu Hamburguer -->
                    <ImageButton
                        android:id="@+id/btnMenu"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_menu"
                        android:contentDescription="@string/menu_resumo"
                        app:layout_constraintBottom_toBottomOf="parent"
...
