...
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName">

                <TextView
                    android:id="@+id/tvValorHighlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-600,00 €"
                    android:textColor="@color/colorNegative"
                    android:textSize="26sp"
                    android:textStyle="bold" />
...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/cardInfo">

            <Button
                android:id="@+id/btnEditarTransacao"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:text="@string/btn_editar_este_item"
                android:textSize="15sp"
...
                android:textColor="@color/white"
                app:cornerRadius="28dp"
                app:icon="@drawable/ic_edit"
                app:iconTint="@color/white" />

            <Button
                android:id="@+id/btnEliminarTransacao"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="32dp"
...
