...
        android:gravity="center"
        android:text="@string/dialog_eliminar_item_msg"
        android:textColor="@color/textColorSecondary"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmarEliminar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/btn_sim_eliminar"
        android:textColor="#F44336"
...
